Task14/database.yaml
# Database Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: database-pv
              mountPath: /var/lib/mysql
      volumes:
        - name: database-pv
          persistentVolumeClaim:
            claimName: database-pvc
---

# Database Service
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: petclinic
spec:
  ports:
    - port: 3306
  selector:
    app: database
