Task14/monitoring.yaml
# Prometheus Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
	name: prometheus-deployment
	namespace: petclinic
spec:
	replicas: 1
	selector:
		matchLabel:
			app: prometheus
	template:
		metadata:
			labels:
				app: prometheus
		spec:
			containers:
				- name: prometheus
					image: prom/prometheus:v2.47.1
					ports:
						-	containerPort: 9090
					args:
          	- "--config.file=/etc/prometheus/prometheus.yml"
					volumeMounts:
						- name: prometheus-cv
          		mountPath: /etc/prometheus/
			volumes:
			- name: prometheus-cv
				configMap:
				  name: prometheus-config
---

# Prometheus Service

apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: petclinic
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30090

---

# Grafana Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:10.1.5
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-cv
          mountPath: /etc/grafana/provisioning/datasources
      volumes:
      - name: grafana-cv
        configMap:
          name: grafana-datasource-config
---
# Grafana Service
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: petclinic
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30300
